few tests - abort/dmesg-warn - *ERROR* GT0: GUC ID manager unclean*
<7> [462.350616] xe 0000:00:02.0: [drm:intel_modeset_verify_crtc [xe]] [CRTC:82:pipe A]
<7> [462.482399] xe 0000:00:02.0: [drm:drm_sysfs_connector_remove [drm]] [CONNECTOR:241:DP-1] removing connector from sysfs
<7> [462.483023] xe 0000:00:02.0: [drm:drm_sysfs_connector_remove [drm]] [CONNECTOR:254:HDMI-A-1] removing connector from sysfs
<7> [462.484339] xe 0000:00:02.0: [drm:drm_sysfs_connector_remove [drm]] [CONNECTOR:260:DP-2] removing connector from sysfs
<7> [462.485482] xe 0000:00:02.0: [drm:drm_sysfs_connector_remove [drm]] [CONNECTOR:269:DP-3] removing connector from sysfs
<7> [462.486226] xe 0000:00:02.0: [drm:drm_sysfs_connector_remove [drm]] [CONNECTOR:278:DP-4] removing connector from sysfs
<7> [462.486950] xe 0000:00:02.0: [drm:drm_sysfs_connector_remove [drm]] [CONNECTOR:287:DP-5] removing connector from sysfs
<3> [462.506495] xe 0000:00:02.0: [drm] *ERROR* GT0: GUC ID manager unclean (1/65535)
<6> [462.506720] xe 0000:00:02.0: [drm] GT0: total 65535
<6> [462.506726] xe 0000:00:02.0: [drm] GT0: used 1
<6> [462.506731] xe 0000:00:02.0: [drm] GT0: range 120..120 (1)
<4> [462.510994] ------------[ cut here ]------------
<4> [462.510997] Memory manager not clean during takedown.
<4> [462.511036] WARNING: CPU: 8 PID: 1701 at drivers/gpu/drm/drm_mm.c:964 drm_mm_takedown+0x27/0x30 [drm]
<4> [462.511073] Modules linked in: hid_sensor_custom_intel_hinge hid_sensor_rotation hid_sensor_magn_3d hid_sensor_gyro_3d hid_sensor_incl_3d hid_sensor_als hid_sensor_accel_3d hid_sensor_trigger industrialio_triggered_buffer hid_sensor_iio_common kfifo_buf industrialio hid_sensor_custom hid_sensor_hub hid_generic intel_ishtp_hid hid intel_uncore_frequency intel_uncore_frequency_common x86_pkg_temp_thermal intel_powerclamp nls_iso8859_1 coretemp snd_sof_pci_intel_tgl snd_sof_pci_intel_cnl snd_sof_intel_hda_generic snd_sof_pci snd_sof_xtensa_dsp kvm_intel snd_sof_intel_hda_common r8153_ecm cdc_ether snd_soc_hdac_hda usbnet snd_sof_intel_hda snd_sof kvm snd_sof_utils snd_soc_acpi_intel_match snd_soc_acpi snd_intel_dspcfg crct10dif_pclmul cmdlinepart crc32_pclmul snd_hda_codec polyval_clmulni polyval_generic snd_hwdep ghash_clmulni_intel snd_sof_intel_hda_mlink spi_nor sha512_ssse3 snd_hda_ext_core sha256_ssse3 snd_hda_core sha1_ssse3 intel_rapl_msr mtd aesni_intel xe(-) crypto_simd snd_soc_core cryptd snd_compress rapl
<4> [462.511135] snd_pcm drm_gpuvm r8152 i2c_algo_bit mii drm_ttm_helper intel_cstate ttm snd_seq efi_pstore processor_thermal_device_pci gpu_sched snd_seq_device drm_suballoc_helper drm_exec snd_timer drm_display_helper drm_kunit_helpers processor_thermal_device processor_thermal_wt_hint processor_thermal_rfim drm_kms_helper processor_thermal_rapl intel_rapl_common spi_pxa2xx_platform kunit processor_thermal_wt_req dw_dmac dw_dmac_core idma64 snd mei_me processor_thermal_power_floor i2c_i801 processor_thermal_mbox e1000e intel_ish_ipc spi_intel_pci thunderbolt drm_buddy soundcore i2c_smbus int340x_thermal_zone mei spi_intel intel_ishtp igen6_edac mac_hid wmi_bmof intel_skl_int3472_tps68470 tps68470_regulator ov13858 video clk_tps68470 v4l2_fwnode v4l2_async intel_pmc_core videodev mc intel_vsec pmt_telemetry int3400_thermal intel_hid pmt_class intel_skl_int3472_discrete wmi acpi_thermal_rel pinctrl_tigerlake acpi_pad sparse_keymap acpi_tad sch_fq_codel msr parport_pc ppdev lp parport drm ip_tables x_tables autofs4
<4> [462.511226] [last unloaded: mei_hdcp]
<4> [462.511230] CPU: 8 PID: 1701 Comm: xe_module_load Tainted: G U 6.10.0-rc6-xe #1
<4> [462.511232] Hardware name: Intel Corporation Alder Lake Client Platform/AlderLake-P DDR5 RVP, BIOS RPLPFWI1.R00.4035.A00.2301200723 01/20/2023
<4> [462.511234] RIP: 0010:drm_mm_takedown+0x27/0x30 [drm]
<4> [462.511262] Code: 90 90 90 0f 1f 44 00 00 48 8b 47 38 48 83 c7 38 48 39 f8 75 05 c3 cc cc cc cc 55 48 c7 c7 48 61 2e a0 48 89 e5 e8 69 7c e7 e0 <0f> 0b 5d c3 cc cc cc cc 90 90 90 90 90 90 90 90 90 90 90 90 90 90
<4> [462.511264] RSP: 0018:ffffc90008a3f8f8 EFLAGS: 00010286
<4> [462.511267] RAX: 0000000000000000 RBX: ffff88812aff5c28 RCX: 0000000000000027
<4> [462.511269] RDX: 0000000000000027 RSI: 00000000ffffd090 RDI: ffff88849f231a48
<4> [462.511271] RBP: ffffc90008a3f8f8 R08: 0000000000000000 R09: 00000000ffffd090
<4> [462.511273] R10: ffffc90008a3f6e0 R11: ffff8884afab6d80 R12: ffff888125c05340
<4> [462.511274] R13: ffff88812aef5740 R14: ffff88812aef5740 R15: dead000000000100
<4> [462.511276] FS: 00007fae655dac40(0000) GS:ffff88849f200000(0000) knlGS:0000000000000000
<4> [462.511278] CS: 0010 DS: 0000 ES: 0000 CR0: 0000000080050033
<4> [462.511279] CR2: 0000556bab3977f8 CR3: 000000014c196000 CR4: 0000000000750ef0
<4> [462.511281] PKRU: 55555554
<4> [462.511283] Call Trace:
<4> [462.511284] <TASK>
<4> [462.511286] ? show_regs+0x67/0x70
<4> [462.511291] ? __warn+0x94/0x1b0
<4> [462.511296] ? drm_mm_takedown+0x27/0x30 [drm]
<4> [462.511323] ? report_bug+0x1b7/0x1d0
<4> [462.511326] ? irq_work_queue+0x10/0x50
<4> [462.511331] ? handle_bug+0x46/0x80